@@ -1,14 +1,18 @@
 package mcjty.rftoolsstorage.modules.scanner.tools;
 
 public enum SortingMode {
-    AMOUNT_ASCENDING("Amount+"),
-    AMOUNT_DESCENDING("Amount-"),
-    NAME("Name");
+    AMOUNT_ASCENDING("Amount+", "Sort by amount (ascending)"),
+    AMOUNT_DESCENDING("Amount-", "Sort by amount (descending)"),
+    MOD("Mod", "Sort by mod"),
+    TAG("Tag", "Sort by most common tag"),
+    NAME("Name", "Sort by name");
 
     private final String description;
+    private final String tooltip;
 
-    SortingMode(String description) {
+    SortingMode(String description, String tooltip) {
         this.description = description;
+        this.tooltip = tooltip;
     }
 
     public static SortingMode byDescription(String s) {
@@ -22,5 +26,9 @@ public enum SortingMode {
 
     public String getDescription() {
         return description;
+    }
+
+    public String getTooltip() {
+        return tooltip;
     }
 }
