@@ -3,23 +3,24 @@ package mcjty.rftoolsstorage.setup;
 import mcjty.lib.compat.MainCompatHandler;
 import mcjty.lib.setup.DefaultModSetup;
 import mcjty.rftoolsstorage.modules.craftingmanager.system.CraftingDeviceRegistry;
+import mcjty.rftoolsstorage.modules.modularstorage.ModularStorageSetup;
 import mcjty.rftoolsstorage.storage.ClientStorageHolder;
 import net.minecraft.item.ItemStack;
-import net.minecraft.item.Items;
 import net.minecraftforge.common.MinecraftForge;
+import net.minecraftforge.fml.ModList;
 import net.minecraftforge.fml.event.lifecycle.FMLClientSetupEvent;
 import net.minecraftforge.fml.event.lifecycle.FMLCommonSetupEvent;
 
 public class ModSetup extends DefaultModSetup {
 
-    public boolean xnet = false; // @todo 1.14
+    public boolean xnet = false;
 
     public ClientStorageHolder clientStorageHolder = new ClientStorageHolder();
     public CraftingDeviceRegistry craftingDeviceRegistry = new CraftingDeviceRegistry();
 
     public ModSetup() {
-        createTab("rftoolsstorage", () -> new ItemStack(Items.CHEST));
-    }   // @todo
+        createTab("rftoolsstorage", () -> new ItemStack(ModularStorageSetup.STORAGE_MODULE0.get()));
+    }
 
     @Override
     public void init(FMLCommonSetupEvent e) {
@@ -38,6 +39,6 @@ public class ModSetup extends DefaultModSetup {
     protected void setupModCompat() {
         MainCompatHandler.registerWaila();
         MainCompatHandler.registerTOP();
-//        FMLInterModComms.sendFunctionMessage("theoneprobe", "getTheOneProbe", "mcjty.rftools.compat.theoneprobe.TheOneProbeSupport");
+        xnet = ModList.get().isLoaded("xnet");
     }
 }
